@@ -19,8 +19,9 @@ gdm (2.16.4-2) UNRELEASED; urgency=low
     level via debian/compat to 4 instead of via DH_COMPAT in rules.
   * Depend on "debconf (>= 0.5) | debconf-2.0" instead of the only virtual
     "debconf-2.0".
+  * Wrap build-deps and deps.
 
- -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:47:35 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:50:07 +0200
 
 gdm (2.16.4-1.1) unstable; urgency=low
 
